--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Hojune Kim
+logo: /assets/img/tonton.png
+
+description: Personal page of Hojune Kim
+
 show_downloads: true
-google_analytics:
 theme: jekyll-theme-minimal
